# HarpyAndroid

./: .gitignore  DHCP_SPOOFING_TEST_GUIDE.md  NATIVE_BUILD_SUMMARY.md  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  arp_operations.cpp  arp_operations.h  dhcp_spoofing.cpp  dhcp_spoofing.h  dns_handler.cpp  dns_handler.h  dns_spoofing.cpp  dns_spoofing.h  harpy_native.cpp  network_scan.cpp  network_scan.h  root_helper_main.cpp
app/src/main/kotlin/com/vishal/harpy/: DeviceAdapter.kt  HarpyApplication.kt  Main.kt  MainActivity.kt  NetworkMonitorService.kt
app/src/main/kotlin/com/vishal/harpy/core/native/: NativeNetworkOps.kt  NativeNetworkWrapper.kt
app/src/main/kotlin/com/vishal/harpy/core/ui/: PermissionsActivity.kt
app/src/main/kotlin/com/vishal/harpy/core/utils/: AppSettings.kt  DevicePreference.kt  DevicePreferenceRepository.kt  LogUtils.kt  NetworkError.kt  NetworkErrorMapper.kt  NetworkModels.kt  PermissionChecker.kt  RootError.kt  RootErrorMapper.kt  SettingsRepository.kt  VendorLookup.kt  VibrationUtils.kt
app/src/main/kotlin/com/vishal/harpy/features/device_manager/data/repository/: DeviceFilterRepository.kt
app/src/main/kotlin/com/vishal/harpy/features/device_manager/domain/usecases/: GetBlacklistedDevicesUseCase.kt
app/src/main/kotlin/com/vishal/harpy/features/dhcp/data/repository/: DhcpRepositoryImpl.kt
app/src/main/kotlin/com/vishal/harpy/features/dhcp/di/: DhcpModule.kt
app/src/main/kotlin/com/vishal/harpy/features/dhcp/domain/repository/: DhcpRepository.kt
app/src/main/kotlin/com/vishal/harpy/features/dhcp/domain/usecases/: IsDhcpSpoofingActiveUseCase.kt  StartDhcpSpoofingUseCase.kt  StopDhcpSpoofingUseCase.kt
app/src/main/kotlin/com/vishal/harpy/features/dhcp/presentation/ui/: DHCPSpoofingFragment.kt
app/src/main/kotlin/com/vishal/harpy/features/dns/data/repository/: DnsRepositoryImpl.kt
app/src/main/kotlin/com/vishal/harpy/features/dns/di/: DnsModule.kt
app/src/main/kotlin/com/vishal/harpy/features/dns/domain/repository/: DnsRepository.kt
app/src/main/kotlin/com/vishal/harpy/features/dns/domain/usecases/: IsDnsSpoofingActiveUseCase.kt  StartDnsSpoofingUseCase.kt  StopDnsSpoofingUseCase.kt
app/src/main/kotlin/com/vishal/harpy/features/dns/presentation/ui/: DNSSpoofingFragment.kt
app/src/main/kotlin/com/vishal/harpy/features/network_monitor/data/repository/: NetworkMonitorRepository.kt
app/src/main/kotlin/com/vishal/harpy/features/network_monitor/di/: NetworkMonitorModule.kt
app/src/main/kotlin/com/vishal/harpy/features/network_monitor/domain/usecases/: BlockDeviceUseCase.kt  IsDeviceBlockedUseCase.kt  IsDeviceRootedUseCase.kt  MapNetworkTopologyUseCase.kt  RestoreBlockedDevicesUseCase.kt  ScanNetworkUseCase.kt  TestPingUseCase.kt  UnblockAllDevicesUseCase.kt  UnblockDeviceUseCase.kt
app/src/main/kotlin/com/vishal/harpy/main/: MainActivity.kt  MainActivityCompose.kt
app/src/main/kotlin/com/vishal/harpy/ui/: HarpyApp.kt
app/src/main/kotlin/com/vishal/harpy/ui/screens/dhcp/: DHCPSpoofingScreen.kt
app/src/main/kotlin/com/vishal/harpy/ui/screens/dns/: DNSSpoofingScreen.kt
app/src/main/kotlin/com/vishal/harpy/ui/screens/network/: NetworkMonitorScreen.kt
app/src/main/kotlin/com/vishal/harpy/ui/screens/settings/: AboutScreen.kt  SettingsScreen.kt
app/src/main/kotlin/com/vishal/harpy/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: bug_report_24px.xml  button_block_background.xml  button_unblock_background.xml  ic_block.xml  ic_bug_report.xml  ic_devices.xml  ic_launcher_foreground.xml  ic_pin.xml  ic_ping.xml  ic_settings.xml  rounded_card_background.xml  router_24px.xml  status_badge_blocked.xml
app/src/main/res/layout/: activity_main.xml  activity_permissions.xml  bottom_sheet_device_actions.xml  device_item.xml  dialog_about.xml  dialog_logging_settings.xml  fragment_dhcp_spoofing.xml  fragment_dns_settings.xml  fragment_network_monitor.xml  fragment_settings.xml  item_network_device.xml  item_permission.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: backup_rules.xml
scripts/: build-libpcap.sh
(+12 files in other folders)
